# libstdc-tests

./: .gitignore  Makefile.am  README.md  conftests.m4  run-cpp.in  testdefs.h.in  testlib.h  testlog.c
c11/: Makefile.am
c11/freestanding/: Makefile.am  c11-stdalign-00.c  c11-stdnoreturn-00.c
c11/hosted/: Makefile.am  c11-stdalign-00.c  c11-stdnoreturn-00.c
c11/unix/: Makefile.am  unixv7.c
c90/: Makefile.am
c90/freestanding/: Makefile.am  c90-limits-char.c  c90-limits-long.c  c90-limits-short.c  c90-stdarg-00.c  c90-stddef-00.c
c90/hosted/: Makefile.am  c90-limits-short.c  c90-stddef-00.c  hosted.c
c90/unix/: Makefile.am  posix.c  posix90.c  xpg3.c
c95/: Makefile.am
c95/freestanding/: Makefile.am
c95/hosted/: .gitignore  Makefile.am
c95/unix/: Makefile.am  posix96.c  unix95.c  unix98.c
c99/: Makefile.am
c99/freestanding/: Makefile.am
c99/hosted/: Makefile.am  c99-support.c
c99/unix/: Makefile.am  posix01.c  unix03.c
freestanding/: .gitignore  Makefile.am  c11-stdalign-00.c  c11-stdnoreturn-00.c  c11-support.c  c90-float-00.c  c90-limits-char.c  c90-limits-int.c  c90-limits-long.c  c90-limits-short.c  c90-stdarg-00.c  c90-stddef-00.c  c90-support.c  c95-iso646-00.c  c95-support.c  c99-limits-longlong.c  c99-stdbool-00.c  c99-stdint-00.c  c99-support.c  freestanding.c
hosted/: .gitignore  Makefile.am  c11-stdalign-00.c  c11-stdnoreturn-00.c  c11-support.c  c90-float-00.c  c90-limits-char.c  c90-limits-int.c  c90-limits-long.c  c90-limits-short.c  c90-stdarg-00.c  c90-stddef-00.c  c90-support.c  c95-iso646-00.c  c95-support.c  c99-limits-longlong.c  c99-stdbool-00.c  c99-stdint-00.c  c99-support.c  hosted.c
lib/: Makefile.am  c11-begin.h  c11-end.h  c90-begin.h  c90-end.h  c95-begin.h  c95-end.h  c99-begin.h  c99-end.h  freestanding-begin.h  freestanding-end.h  hosted-begin.h  hosted-end.h  posix-begin.h  posix-end.h  testlib.h  testlog.c  unix-begin.h  unix-end.h
unix/: .gitignore  Makefile.am  posix08.c  posix93.c  posix96.c  unix  unix.c  unix95.c  unix98.c  xpg4.c
